artifacts/example-for-local-ingress/example-us-east-ingress.yaml
#  Copyright 2021 Google Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http:#www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    environment: dev
  name: us-east-regional-ingress
  namespace: local-zoneprinter
  annotations:
    kubernetes.io/ingress.global-static-ip-name: static-ip-dev-cl
    networking.gke.io/managed-certificates: cl-local-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  defaultBackend:
    service:
      name: us-east-local
      port:
       number: 8080
  rules:
  - host: us-east.gcp.conectica.cl
